Add companies route, fix location count filter

--- a/netlify.toml
+++ b/netlify.toml
@@ -67,6 +67,15 @@
   to = "/.netlify/functions/locations-search"
   status = 200
 [[redirects]]
+  from = "/companies/:slug/"
+  to = "/.netlify/functions/company-page"
+  status = 200
+
+[[redirects]]
+  from = "/companies/:slug"
+  to = "/.netlify/functions/company-page"
+  status = 200
+[[redirects]]
   from = "/sitemap-shops-1.xml"
   to = "/.netlify/functions/sitemap"
   status = 200
