--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   publish = "_site"
   functions = "netlify/functions"
 
+[build.environment]
+  NODE_OPTIONS = "--max-old-space-size=8192"
+
 [functions]
   node_bundler = "esbuild"
 
