--- a/netlify/functions/package.json
+++ b/netlify/functions/package.json
@@ -2,7 +2,8 @@
   "name": "joe-netlify-functions",
   "version": "1.0.0",
   "dependencies": {
-    "twilio": "^4.23.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "googleapis": "^170.1.0",
+    "twilio": "^4.23.0"
   }
 }
