fixes call center

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,104 +1,62 @@
-[build]
-  publish = "_site"
-  functions = "netlify/functions"
+# Add this redirect to your existing netlify.toml
+# Place it BEFORE any catch-all redirects
 
-[build.environment]
-  NODE_OPTIONS = "--max-old-space-size=8192"
+[[redirects]]
+  from = "/schedule/*"
+  to = "/.netlify/functions/schedule-page"
+  status = 200
+
+# ============================================
+# FULL NETLIFY.TOML EXAMPLE (merge with yours)
+# ============================================
+
+[build]
+  publish = "."
+  functions = "netlify/functions"
 
 [functions]
   node_bundler = "esbuild"
 
-# Sitemap redirects
+# Scheduling
 [[redirects]]
-  from = "/sitemap.xml"
-  to = "/.netlify/functions/sitemap"
+  from = "/schedule/*"
+  to = "/.netlify/functions/schedule-page"
   status = 200
 
-[[redirects]]
-  from = "/sitemap-states.xml"
-  to = "/.netlify/functions/sitemap"
-  status = 200
-
-[[redirects]]
-  from = "/sitemap-cities.xml"
-  to = "/.netlify/functions/sitemap"
-  status = 200
-
-[[redirects]]
-  from = "/sitemap-shops-:num.xml"
-  to = "/.netlify/functions/sitemap"
-  status = 200
-
-# Location page redirects
-[[redirects]]
-  from = "/locations/:state/:city/:slug/products/"
-  to = "/.netlify/functions/shop-products"
-  status = 200
-
-[[redirects]]
-  from = "/locations/:state/:city/:slug/products"
-  to = "/.netlify/functions/shop-products"
-  status = 200
-
-[[redirects]]
-  from = "/locations/:state/:city/:slug/*"
-  to = "/.netlify/functions/location-page"
-  status = 200
-
-[[redirects]]
-  from = "/locations/:state/:city/"
-  to = "/.netlify/functions/city-page"
-  status = 200
-
-[[redirects]]
-  from = "/locations/:state/"
-  to = "/.netlify/functions/state-page"
-  status = 200
-
-[[redirects]]
-  from = "/locations/near-me/*"
-  to = "/.netlify/functions/near-me"
-  status = 200
-
+# Locations (if you have these)
 [[redirects]]
   from = "/locations/"
   to = "/.netlify/functions/locations-index"
   status = 200
 
 [[redirects]]
-  from = "/locations/search/*"
-  to = "/.netlify/functions/locations-search"
-  status = 200
-[[redirects]]
-  from = "/companies/:slug/"
-  to = "/.netlify/functions/company-page"
+  from = "/locations/:state/"
+  to = "/.netlify/functions/locations-state"
   status = 200
 
 [[redirects]]
-  from = "/companies/:slug"
-  to = "/.netlify/functions/company-page"
-  status = 200
-[[redirects]]
-  from = "/sitemap-shops-1.xml"
-  to = "/.netlify/functions/sitemap"
+  from = "/locations/:state/:city/"
+  to = "/.netlify/functions/locations-city"
   status = 200
 
 [[redirects]]
-  from = "/sitemap-shops-2.xml"
-  to = "/.netlify/functions/sitemap"
+  from = "/locations/:state/:city/:slug"
+  to = "/.netlify/functions/location-page"
+  status = 200
+
+# CRM
+[[redirects]]
+  from = "/crm"
+  to = "/crm/index.html"
   status = 200
 
 [[redirects]]
-  from = "/sitemap-shops-3.xml"
-  to = "/.netlify/functions/sitemap"
+  from = "/crm/"
+  to = "/crm/index.html"
   status = 200
 
+# API routes (examples)
 [[redirects]]
-  from = "/sitemap-shops-4.xml"
-  to = "/.netlify/functions/sitemap"
-  status = 200
-
-[[redirects]]
-  from = "/sitemap-shops-5.xml"
-  to = "/.netlify/functions/sitemap"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
