--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.1",
+    "@hubspot/api-client": "^13.4.0",
     "@supabase/supabase-js": "^2.78.0",
     "dotenv": "^17.2.3",
     "googleapis": "^170.1.0",
